3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/holy.c, include/libproto.h: Declare some functions as "static".
Andreas Kirschbaum 2006-05-21

Make socket handling more robust.
---
include/newclient.h: Split MAXSOCKBUF into MAXSOCKRECVBUF and MAXSOCKSENDBUF.
   Increase the receive buffer size to be able to handle all valid packets;
   decrease send buffer size to 10239 to not overflow the receive buffer of old
   clients.
socket/{image.c,info.c,init.c,item.c,loop.c,lowlevel.c,request.c,sounds.c}: Use
   renamed constants.
socket/image.c: In send_image_sums() prevent buffer overflows. Reject the
   command instead.
socket/request.c: In send_skill_info() and send_spell_paths() prevent buffer
   overflows. Instead send only as much information as fits into the buffer.
socket/loop.c: In handle_client() prevent possible array out-of-bounds access.
Andreas Kirschbaum 2006-05-21

Added a 'cf_log' function for plugins. Replace printf in plugins with correct call.
---
include/plugin.h: include required header for log level definitions.
include/sproto.h: new function.
plugins/cfanim/cfanim.c: replace printf with calls to cf_log.
plugins/cfpython/cfpython.c: replace printf with calls to cf_log.
plugins/cfpython/cfpython_map.c: replace printf with calls to cf_log.
plugins/common/plugin_common.c: new cf_log function.
plugins/common/include/plugin_common.h: new cf_log function.
server/plugins.c: new hook.
Ryo 2006-05-20

This adds a "bot" flag for players. Such players won't be counted when
 sending information to metaserver. To enable it, just send "bot 1"
 through the "setup" command.
---
include/newserver.h: add new is_bot flag.
lib/settings: add %b to default formats.