@@ -17,6 +17,7 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+common/item.c: Skip some processing if NEW_MATERIAL_CODE is undefined.
 common/holy.c, include/libproto.h: Declare some functions as "static".
 Andreas Kirschbaum 2006-05-21
 
